--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
         %a.brand-logo{:href => "#"} TicketBoard
         %ul#nav-mobile.right.hide-on-med-and-down
           %li
-            %a{:href => "#"} Registrate
+            %a{:href => new_user_registration_path} Registrate
           %li
             %a{:href => "#"} Iniciar Sesión
           %li
